# automachina

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs
src/architectures/: mod.rs
src/architectures/directives/: directive.rs  mod.rs
src/architectures/instructions/: instruction.rs  mod.rs
src/architectures/instructions/control/: call.rs  control.rs  interrupt.rs  jump.rs  mod.rs
src/architectures/instructions/manipulation/: arithmetic.rs  comparison.rs  logic.rs  manipulation.rs  mod.rs  shift.rs
src/architectures/instructions/memory/: input.rs  load.rs  memory.rs  mod.rs  output.rs  pop.rs  push.rs  store.rs
src/architectures/interrupts/: interrupt.rs
src/architectures/labels/: global.rs  label.rs  local.rs  mod.rs
src/architectures/programs/: program.rs
src/architectures/registers/: mod.rs  register.rs  scalar.rs  vector.rs
src/architectures/stacks/: call.rs  data.rs  mod.rs  stack.rs
